--- a/JS/index.html
+++ b/JS/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-
+<body style="background-color: black;">
     
     <script src="new.js"></script>
 </body>
