Learned get set classlist

--- a/JS/index.html
+++ b/JS/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>DOM</title>
+<style>
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        border: 1px solid #ccc;
+        padding: 10px;
+        max-width: 400px;
+        box-shadow: 0.5px 0.5px 2px 2px #ccc;
+    }
+    .styles{
+        color: crimson;
+        font-weight: normal;
+        font-family: sans-serif;
+        text-decoration: line-through;
+    }
+</style>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: black;">
-    
+
+<body style="background-color: rgb(75, 67, 67);">
+    <h1>getElementByTagName</h1>
+    <h1>getElementByTagName</h1>
+    <h1>getElementByTagName</h1>
+    <h2 id="main">getElementById</h2>
+    <h3 class="cls">getElementByClassName</h3>
+    <h4 class="cls-1" id="id-1">querySelector</h4>
+    <ul>
+        querySelectorAll
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+    <p>Lorem, ipsum dolor sit amet <strong>consectetur adipisicing elit.</strong>ore quos laudantium
+        <script>console.log("HuXn Here")
+        </script> necessitatibus dolor voluptatibus odit reiciendis nesciunt.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 id="newStyles">Hello World</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href="http://facebook.com" class="fb">Facebook</a>
+    <a class="yt">Youtube</a>
+    <input type="text" class="input1" value="Example">
+    <input type="text" class="input2">
+    <br>
+    <br>
+    <br>
+
     <script src="new.js"></script>
 </body>
+
 </html>
