--- a/JS/index.html
+++ b/JS/index.html
@@ -41,7 +41,7 @@
         <li>4</li>
     </ul>
     <p>Lorem, ipsum dolor sit amet <strong>consectetur adipisicing elit.</strong>ore quos laudantium
-        <script>console.log("HuXn Here")
+        <!-- <script>console.log("HuXn Here") -->
         </script> necessitatibus dolor voluptatibus odit reiciendis nesciunt.
     </p>
     <br>
@@ -62,6 +62,12 @@
     <br>
     <br>
     <br>
+    <ul id="firstUl">
+        <li id="firstLi">1</li>
+        <li>2</li>
+        <li id="thirdLi">3</li>
+        <li class="fourth">4</li>
+    </ul>
 
     <script src="new.js"></script>
 </body>
