Learned Append, Prepend, InsertBefore

--- a/JS/index.html
+++ b/JS/index.html
@@ -18,6 +18,10 @@
         font-family: sans-serif;
         text-decoration: line-through;
     }
+    .jsStyle{
+        color: red;
+        background-color: blue;
+    }
 </style>
 
 <head>
@@ -67,6 +71,34 @@
         <li>2</li>
         <li id="thirdLi">3</li>
         <li class="fourth">4</li>
+    </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 id="jsStyle">Hello World</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <ul id="newUl">
+        <li id="new-list1">1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+    <p id="newp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos odit deserunt totam.</p>
+
+    <section id="sec">Hello</section>
+
+    <ul class="new-list">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li id="fourth">4</li>
+        <li>5</li>
     </ul>
 
     <script src="new.js"></script>
