Practive key event listner

--- a/JS/index.html
+++ b/JS/index.html
@@ -22,6 +22,9 @@
         color: red;
         background-color: blue;
     }
+    .blue{
+        color: blue;
+    }
 </style>
 
 <head>
@@ -100,6 +103,39 @@
         <li id="fourth">4</li>
         <li>5</li>
     </ul>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button onclick="console.log('this is inline')">Click ME</button>
+    <button class="second-btn">Bad Way</button>
+    <button class="best">Best Way</button>
+    <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eaque debitis animi porro nemo ullam.</p>
+
+    <form id="form1">
+        <input type="text" id="input1">
+        <input type="submit" value="Submit">
+    </form>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <p id="test2" class="blue">Lorem ipsum dolor sit amet.</p>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <input type="text" id="input3">
 
     <script src="new.js"></script>
 </body>
